# tensorbit-core

./: .clang-format  .gitignore  CMakeLists.txt  README.md  first_test.md  format.sh  verify_ubuntu.sh
docs/: ALGORITHMS.md  ARCHITECTURE.md  CLOUD.md  CORING.md  DOCUMENTATION.md  EHAP.md  LOCAL_TEST.md  TESTING.md  TODO.md  demo-mistral-7b.md
include/tensorbit/core/: common.hpp  coring.hpp  ehap.hpp  kernels.hpp  loader.hpp  serialization.hpp  tensor.hpp
scripts/: download_model.py  merge_tbm.py  setup_cloud.sh  verify_ubuntu.sh
src/: coring.cpp  ehap.cpp  kernels.cu  kernels_stubs.cpp  main.cpp  serialization.cpp
tests/: test_all.sh  test_coring.cpp  test_ehap.cpp
tests/merge/: create_test_tb.py  test_merge.sh
tests/multi_tensor/: create_multi_model.py  test_multi.sh
